<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.LiveData"/>
        <variable name="registerViewState"
                  type="LiveData&lt;com.example.ntmchau.data.main.register.RegisterViewState>"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:id="@+id/user_info_title"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/phone_number_title"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:textAlignment="center"
                  android:text="@string/user_info"
                  android:textAllCaps="true"
                  android:textSize="17sp"
                  android:padding="10dp"
                  android:layout_marginTop="20dp"/>

        <TextView android:id="@+id/phone_number_title"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/user_info_title"
                  app:layout_constraintBottom_toTopOf="@+id/phone_number"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/phone_number"
                  android:textAllCaps="true"
                  android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/phone_number"
                                                                 app:layout_constraintRight_toRightOf="parent"
                                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                                 app:layout_constraintTop_toBottomOf="@+id/phone_number_title"
                                                                 app:layout_constraintBottom_toTopOf="@+id/full_name_title"
                                                                 android:layout_width="0dp"
                                                                 android:layout_height="wrap_content"
                                                                 tools:text="@string/phone_number"
                                                                 android:padding="10dp"
                                                                 android:text="@={registerViewState.phoneNumber}"/>

        <TextView android:id="@+id/full_name_title"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/phone_number"
                  app:layout_constraintBottom_toTopOf="@+id/full_name"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/full_name"
                  android:textAllCaps="true"
                  android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/full_name"
                                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                                 app:layout_constraintRight_toRightOf="parent"
                                                                 app:layout_constraintTop_toBottomOf="@+id/full_name_title"
                                                                 app:layout_constraintBottom_toTopOf="@+id/national_id_title"
                                                                 android:layout_width="0dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:padding="10dp"
                                                                 android:text="@={registerViewState.fullName}"
                                                                 tools:text="@string/full_name"/>

        <TextView android:id="@+id/national_id_title"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/full_name"
                  app:layout_constraintBottom_toTopOf="@+id/national_id"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/national_id_number"
                  android:textAllCaps="true"
                  android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/national_id"
                                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                                 app:layout_constraintRight_toRightOf="parent"
                                                                 app:layout_constraintTop_toBottomOf="@+id/national_id_title"
                                                                 app:layout_constraintBottom_toTopOf="@+id/province_title"
                                                                 android:layout_width="0dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:padding="10dp"
                                                                 android:text="@={registerViewState.nationalIdNumber}"
                                                                 tools:text="@string/national_id_number"/>

        <TextView android:id="@+id/province_title"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/national_id"
                  app:layout_constraintBottom_toTopOf="@+id/province"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/province"
                  android:textAllCaps="true"
                  android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/province"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/province_title"
                app:layout_constraintBottom_toTopOf="@+id/monthly_income_title"
                app:entries="@{registerViewState.provinces}"
                app:layout="@{@android:layout/simple_spinner_item}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:selectedValue="@={registerViewState.province}"/>

        <TextView android:id="@+id/monthly_income_title"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/province"
                  app:layout_constraintBottom_toTopOf="@+id/monthly_income"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:textAllCaps="true"
                  android:text="@string/monthly_income"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/monthly_income"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthly_income_title"
                app:layout_constraintBottom_toTopOf="@+id/send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:entries="@{registerViewState.monthlyIncomeList}"
                app:layout="@{@android:layout/simple_spinner_item}"
                android:padding="10dp"
                app:selectedValue="@={registerViewState.monthlyIncome}"/>

        <Button android:id="@+id/send"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthly_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="@string/send"
                android:layout_marginTop="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
